# kg_builder

./: .cursorrules.example  .gitignore  AGENTIC_CODING_PLAN.md  CLAUDE.md  MCP_SETUP.md  README.md  kg.json  pyproject.toml  viz_plan.md
.claude/agents/: claude-skill-builder.md  knowledge-graph-designer.md  knowledge-graph-engineer.md  knowledge-graph-viz-builder.md  qa-test-specialist.md  research-manager.md
docs/: CURSOR_INTEGRATION.md  MCP_SETUP.md  USAGE_GUIDE.md  evaluation_report.md  kg_skills_tools_design.md
docs/design/: DESIGN_KG_SKILLS_TOOLS.md  SYSTEM_PROMPT.md
docs/planning/: KG_VIZ_PLAN.md  PLAN.md
examples/: agent_demo.py
kg-builder-vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
kg-builder-vscode/src/: extension.ts  kgEngine.ts  stateManager.ts
kg_builder/: __init__.py  agent_helper.py  agent_planner.py  cli.py  mcp_server.py  models.py  parser.py  query_engine.py  relationship_finder.py  round_trip.py  symbol_resolver.py
kg_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kg_builder/.ipynb_checkpoints/: models-checkpoint.py
kg_builder/.kg_cache/: cache_timestamp.txt  codebase_hash.txt  knowledge_graph.pkl
kg_builder/agents/: __init__.py  agent_helper.py  mcp_server.py
kg_builder/core/: __init__.py  parser.py  query_engine.py  (+3 more)
output/: kg.json
tests/: __init__.py  conftest.py  test_agent_planner.py  test_cli_diff.py  test_kg_diff.py  test_parser.py  test_round_trip.py
viz/: README.md  index.html  package-lock.json  package.json  viz_plan.md
(+54 files in other folders)
